--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   firebase_core: ^1.24.0
   google_sign_in: ^5.4.2
 
+  flutter_map: ^3.0.0
+
+  latlong2: ^0.8.1
+
 dev_dependencies:
   flutter_lints: 2.0.1
   flutter_test:
