--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,9 @@ dependencies:
   google_sign_in: ^5.4.2
 
   flutter_map: ^3.0.0
-
   latlong2: ^0.8.1
+  geolocator: ^9.0.2
+  flutter_map_location_marker: ^5.0.0+1
 
 dev_dependencies:
   flutter_lints: 2.0.1
