--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,11 @@ dependencies:
   flutter_map_location_marker: ^5.0.0+1
 
   restart_app: ^1.1.0
+
   syncfusion_flutter_calendar: ^20.3.56
   syncfusion_localizations: ^20.3.56
+
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_lints: 2.0.1
