--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
    <application
-        android:label="fbus_mobile_student"
+        android:label="FBus"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
