--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   latlong2: ^0.8.1
   geolocator: ^9.0.2
   flutter_map_location_marker: ^5.0.0+1
+  polyline_do: ^0.1.0
 
   restart_app: ^1.1.0
 
@@ -48,8 +49,6 @@ dependencies:
   hyper_polyline: ^0.0.4
 
   lottie: ^2.0.0
-
-  glassmorphism: ^3.0.0
 
 dev_dependencies:
   flutter_lints: 2.0.1
