--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,11 @@ dependencies:
   hyper_app_settings: ^0.0.1
   jwt_decode: ^0.3.1
 
-  firebase_auth: ^3.11.1
-  firebase_core: ^1.24.0
+  firebase_auth: ^4.1.4
+  firebase_core: ^2.3.0
   google_sign_in: ^5.4.2
+  firebase_messaging: ^14.1.2
+  flutter_local_notifications: ^12.0.4
 
   flutter_map: ^3.0.0
   latlong2: ^0.8.1
